@@ -1,6 +1,6 @@
-.\"	$NetBSD: racoon.conf.5,v 1.1.1.2 2005/02/23 14:54:26 manu Exp $
+.\"	$NetBSD: racoon.conf.5,v 1.1.1.3 2005/02/24 20:53:56 manu Exp $
 .\"
-.\" Id: racoon.conf.5,v 1.27 2005/02/11 06:59:01 manubsd Exp
+.\" Id: racoon.conf.5,v 1.27.2.1 2005/02/24 18:31:56 manubsd Exp
 .\"
 .\" Copyright (C) 1995, 1996, 1997, and 1998 WIDE Project.
 .\" All rights reserved.
@@ -129,17 +129,39 @@ is one of following:
 .Ss Privilege separation
 .Bl -tag -width Ds -compact
 .It Ic privsep { Ar statements Ic }
-specifies privilege separation parameters.
+specifies privilege separation parameters. When enabled, these enable
+.Xr racoon 8
+to operate with an unprivilegied instance doing most of the work, while
+a privilegied instance take care of performing the following operations 
+as root: reading PSK and private keys, launching hook scripts, and 
+validating passwords against system database or against PAM.
 .Pp
 .Bl -tag -width Ds -compact
 .It Ic user Ar user ;
-The user
+The user the unprivilegied instance of
 .Xr racoon 8 ,
 should switch to. This can be a quoted user name or a numeric UID.
 .It Ic group Ar group ;
-The group
+The group the unprivilegied instance of
 .Xr racoon 8 ,
 should switch to. This can be a quoted group name or a numeric GID.
+.It Ic chroot Ar path ;
+A directory where the unprivilegied instance of 
+.Xr racoon 8
+should 
+.Xr chroot 2
+to. This directory should hold a tree where the following files must be
+reachable:
+.Bl -tag -width Ds -compact
+.It Pa /dev/random
+.It Pa /dev/urandom
+.It The certificates.
+.It The file containing the Xauth banner.
+.El
+.Pp
+The PSK file, the private keys, and the hook scripts are accessed through 
+.Xr racoon 8
+privilegied instance and do not need to be reachable in the chrooted tree.
 .El
 .El
 .Ss Path Specification
